--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Eryk",
   "license": "ISC",
   "dependencies": {
-    "express": "4.18.2"
+    "express": "4.17.0",
+    "ejs": "3.1.6"
   }
 }
